test/kustomize/base/prod-deployment-scripts/deployment-product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productpage-deployment
  namespace: dev
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  selector:
    matchLabels:
      app: productpage
  replicas: 2
  template:
    metadata:
      labels:
        app: productpage
    spec:
      serviceAccountName: product-service-account
      containers:
      - name: details
        image: <IMAGE-PATH>
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 5
          successThreshold: 2   
        resources:
          limits:
            cpu: "256m" 
            memory: "512Mi"
          requests:
            cpu: "256m"
            memory: "512Mi"
      tolerations:
      - key: "spotInstance"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: eks.amazonaws.com/capacityType
                operator: In
                values:
                - SPOT
