test/kustomize/base/prod-deployment-scripts/istio_auth_allow_istio_to_dev.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-istio-to-dev
  namespace: dev
  annotations:
    argocd.argoproj.io/sync-wave: "7"
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["istio-system"]
