test/kustomize/base/prod-deployment-scripts/istio_auth_deny_all_dev.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
 name: allow-nothing-dev
 namespace: dev
 annotations:
    argocd.argoproj.io/sync-wave: "7"
spec:
  {}
