test/kustomize/base/prod-deployment-scripts/istio_authpolicy_allow-dev-to-dev.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-dev-to-dev
  namespace: dev
  annotations:
    argocd.argoproj.io/sync-wave: "7"
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["dev"]
