test/kustomize/base/prod-deployment-scripts/namespace-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    istio.io/dataplane-mode: ambient
